feat add a none preloader

--- a/css/main.css
+++ b/css/main.css
@@ -380,6 +380,10 @@ h1, h2, h3, h4, h5, h6, p, span {
         margin-left: 100px;
     }
 
+    .preloader {
+        display: none;
+    }
+
     ul {
         list-style: none;
         margin: 0;
