--- a/css/main.css
+++ b/css/main.css
@@ -193,6 +193,33 @@ h1, h2, h3, h4, h5, h6, p, span {
     }
 }
 
+.shadow-point {
+    position: absolute;
+    top: 3%;
+    left: 20%;
+    width: 50px;
+    height: 50px;
+    background-color: #ff9f63;
+    border-radius: 50%;
+    animation: shadow 1s infinite alternate;
+    z-index: -1;
+}
+
+@keyframes shadow {
+    from {
+      box-shadow: 0 0 55px 10px #ff9f63;
+    }
+    to {
+      box-shadow: 0 0 90px 30px#ff9f63;
+    }
+}
+
+.hero__content-light {
+    position: absolute;
+    top: -60px;
+    left: -105px;
+}
+
 .hero__content-logo {
     margin-bottom: 40px;
 }
