--- a/css/main.css
+++ b/css/main.css
@@ -71,13 +71,13 @@ h1, h2, h3, h4, h5, h6, p, span {
 .menu__nav {
     position: relative;
     margin-right: auto;
-    margin-left: 110px;
+    margin-left: 25px;
     margin-right: 20px;
 }
 
 .nav__item {
     position: relative;
-    margin-right: 50px;
+    margin-right: 30px;
     font-family: 'Calibri', sans-serif;
     font-size: 20px;
     font-weight: bold;
@@ -89,7 +89,7 @@ h1, h2, h3, h4, h5, h6, p, span {
     margin-right: 0px;
 }
 
-.nav__item::after {
+/*.nav__item::after {
     display: block;
 	position: absolute;
 	left: 0; 
@@ -105,7 +105,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 .nav__item:focus:after {
 	width: 100%;
 }
-
+*/
 .phone__images {
     margin-right: 20px;
 }
@@ -157,8 +157,24 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 .hero__message {
     position: absolute;
-    bottom: 40%;
+    bottom: 45%;
     right: 20%;
+}
+
+.hero__content-message {
+    animation-duration: 2s;
+    animation-iteration-count: infinite;
+}
+
+.bounce-2 {
+    animation-name: bounce-2;
+    animation-timing-function: ease;
+}
+
+@keyframes bounce-2 {
+    0%   { transform: translateY(0); }
+    50%  { transform: translateY(20px); }
+    100% { transform: translateY(0); }
 }
 
 .hero__content-cogwheel {
@@ -170,7 +186,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 .hero__content-cogwheel-2 {
     animation-name: rotation-2;
-    animation-duration: 4s;
+    animation-duration: 3.5s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
@@ -199,7 +215,7 @@ h1, h2, h3, h4, h5, h6, p, span {
     left: 20%;
     width: 50px;
     height: 50px;
-    background-color: #ff9f63;
+    background-color: transparent;
     border-radius: 50%;
     animation: shadow 1s infinite alternate;
     z-index: -1;
@@ -216,8 +232,8 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 .hero__content-light {
     position: absolute;
-    top: -60px;
-    left: -105px;
+    top: -88px;
+    left: -103px;
 }
 
 .hero__content-logo {
