--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,15 @@ html {
     font-size: 14px;
 }
 
+html.is-animating .transition-fade {
+    opacity: 0;
+}
+
+.transition-fade {
+    transition: .4s;
+    opacity: 1;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -250,6 +259,34 @@ h1, h2, h3, h4, h5, h6, p, span {
     color: #20206B;
 }
 
+/* Стили для Русского языка */
+
+.hero__title-ru {
+    margin-bottom: 70px;
+    font-family: 'Calibri', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+    line-height: 56px;
+    text-transform: uppercase;
+    color: #20206B;
+}
+
+.hero__title-desc-ru {
+    display: block;
+    margin-bottom: 10px;
+    font-family: 'Calibri', sans-serif;
+    font-weight: bold;
+    font-size: 35px;
+    line-height: 53px;
+    color: #CE0056;
+}
+
+.hero__btn span {
+    margin-left: -15px;
+}
+
+/* Стили для Русского языка */
+
 .hero__title-desc {
     display: block;
     margin-bottom: 70px;
@@ -341,7 +378,9 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 .footer__content {
     display: flex;
-    justify-content: start;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .social__icon {
@@ -359,6 +398,31 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 .footer__social-link:last-of-type {
     margin-right: 0px;
+}
+
+.footer__language {
+    display: flex;
+    align-items: center;
+}
+
+.footer__language-item {
+    margin-left: 20px;
+    font-size: 22px;
+    font-weight: bold;
+    text-decoration: none;
+    color:  #20206B;
+    transition: 0.5s ease;
+    padding: 10px;
+}
+
+.footer__language-item:hover {
+    background-color: #CE0056;
+    color: #ffffff;
+}
+
+.lang__active {
+    background-color: #CE0056;
+    color: #ffffff;
 }
 
 /* --------- Preloader style ---------- */
@@ -556,7 +620,7 @@ h1, h2, h3, h4, h5, h6, p, span {
 
 @media (max-width: 768px) {
     body {
-        background: url('../img/img-hero.png') no-repeat center center;
+        background: url('../img/img-hero.png') no-repeat center center; 
     }
 
     .header__content {
