--- a/css/main.css
+++ b/css/main.css
@@ -746,6 +746,10 @@ h1, h2, h3, h4, h5, h6, p, span {
         margin-right: 15px;
         font-size: 14px;
     }
+
+    .popup .popup-content {
+        left: 25%;
+    }
 }
 
 @media (max-width: 768px) {
@@ -1091,6 +1095,11 @@ h1, h2, h3, h4, h5, h6, p, span {
         }
       }
 
+    .popup .popup-content {
+        left: 20%;
+        width: 35rem;
+    }
+
 }
 
 @media (max-width: 648px) {
@@ -1101,11 +1110,29 @@ h1, h2, h3, h4, h5, h6, p, span {
     ul li {
         font-size: 30px;
     }
+
+    .popup .popup-content {
+        left: 18%;
+        width: 33rem;
+    }
+
 }
 
 @media (max-width: 525px) {
     .hero__title {
         font-size: 30px;
+    }
+
+    .popup .popup-content {
+        left: 20%;
+        width: 28rem;
+    }
+}
+
+@media (max-width: 450px) {
+    .popup .popup-content {
+        left: 22%;
+        width: 25rem;
     }
 }
 
@@ -1120,6 +1147,20 @@ h1, h2, h3, h4, h5, h6, p, span {
 
     ul li {
         font-size: 30px;
+    }
+
+    .popup .popup-content {
+        left: 25%;
+        width: 22rem;
+        padding: 2rem 3rem;
+    }
+}
+
+@media (max-width: 370px) {
+    .popup .popup-content {
+        left: 30%;
+        width: 18rem;
+        padding: 2rem 2rem;
     }
 }
 
