feat 100% new files done

--- a/css/main.css
+++ b/css/main.css
@@ -136,6 +136,43 @@ h1, h2, h3, h4, h5, h6, p, span {
     outline: none;
 }
 
+.popup-ata {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9;
+    background-color: rgba(0, 0, 0, .5)
+}
+
+.popup-ata .popup-content-ata {
+    position: fixed;
+    width: 40rem;
+    left: 38%;
+    top: 10%;
+    -webkit-transform: translateX(-50px);
+    transform: translateX(-50px);
+    padding: 2rem 6rem;
+    background-color: #ffffff
+}
+
+.popup-ata .popup-close-ata {
+    position: absolute;
+    z-index: 999999;
+    top: 0;
+    right: 1rem;
+    width: 2rem;
+    text-align: center;
+    border: none;
+    font-size: 3rem;
+    color: #20206B;
+    background: none;
+    outline: none;
+}
+
 .popup__title {
     margin-bottom: 30px;
     font-family: 'Calibri', sans-serif;
@@ -1173,4 +1210,15 @@ h1, h2, h3, h4, h5, h6, p, span {
         padding-top: 10px;
         max-width: 35%;
     }
+}
+
+@media (max-width: 320px) {
+    .popup__content-link-email img,
+    .popup__content-link-website img,
+    .popup__content-link-tel img {
+	margin-right: 10px;
+    }
+    .popup__content-link-email a {
+    	font-size: 14px;
+    }   
 }
