--- a/css/main.css
+++ b/css/main.css
@@ -787,6 +787,10 @@ h1, h2, h3, h4, h5, h6, p, span {
     .popup .popup-content {
         left: 25%;
     }
+
+    .popup-ata .popup-content-ata {
+        left: 25%;
+    }
 }
 
 @media (max-width: 768px) {
@@ -1137,6 +1141,11 @@ h1, h2, h3, h4, h5, h6, p, span {
         width: 35rem;
     }
 
+    .popup-ata .popup-content-ata {
+        left: 20%;
+        width: 35rem;
+    }
+
 }
 
 @media (max-width: 648px) {
@@ -1153,6 +1162,11 @@ h1, h2, h3, h4, h5, h6, p, span {
         width: 33rem;
     }
 
+    .popup-ata .popup-content-ata {
+        left: 18%;
+        width: 33rem;
+    }
+
 }
 
 @media (max-width: 525px) {
@@ -1164,10 +1178,20 @@ h1, h2, h3, h4, h5, h6, p, span {
         left: 20%;
         width: 28rem;
     }
+
+    .popup-ata .popup-content-ata {
+        left: 20%;
+        width: 28rem;
+    }
 }
 
 @media (max-width: 450px) {
     .popup .popup-content {
+        left: 22%;
+        width: 25rem;
+    }
+
+    .popup-ata .popup-content-ata {
         left: 22%;
         width: 25rem;
     }
@@ -1191,10 +1215,22 @@ h1, h2, h3, h4, h5, h6, p, span {
         width: 22rem;
         padding: 2rem 3rem;
     }
+
+    .popup-ata .popup-content-ata {
+        left: 25%;
+        width: 22rem;
+        padding: 2rem 3rem;
+    }
 }
 
 @media (max-width: 370px) {
     .popup .popup-content {
+        left: 30%;
+        width: 18rem;
+        padding: 2rem 2rem;
+    }
+
+    .popup-ata .popup-content-ata {
         left: 30%;
         width: 18rem;
         padding: 2rem 2rem;
